--- a/package.json
+++ b/package.json
@@ -51,11 +51,10 @@
     "start.docker.arch": "docker run -t setup-cpp:arch .",
     "start.docker.fedora": "docker run -t setup-cpp:fedora .",
     "start.docker.ubuntu": "docker run -t setup-cpp:ubuntu .",
-    "test": "run-p --continue-on-error test.lint test.unit",
     "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.eslint test.lint.prettier lint.tsc",
     "test.lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.prettier": "prettier . --check",
-    "test.unit": "jest --runInBand",
+    "test": "jest --runInBand",
     "build.docker_tests": "node ./dev/docker/__tests__/generate-docker-tests.mjs",
     "build.docker.arch": "pnpm build.docker_tests && docker build -f ./dev/docker/__tests__/arch.dockerfile -t setup-cpp:arch .",
     "build.docker.fedora": "pnpm build.docker_tests && docker build -f ./dev/docker/__tests__/fedora.dockerfile -t setup-cpp:fedora .",
