--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@types/jest": "^29.5.3",
     "@types/mri": "^1.1.1",
     "@types/node": "^20.4.5",
-    "@types/npmcli__ci-detect": "^2.0.0",
     "@types/prettier": "2.7.3",
     "@types/semver": "^7.5.0",
     "@types/which": "^3.0.0",
@@ -101,9 +100,6 @@
     "eslint-config-atomic": "^1.19.3",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
-    "fast-glob": "^3.3.1",
-    "find-up": "^6.3.0",
-    "gen-readme": "^1.6.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.6.2",
     "micro-memoize": "^4.1.2",
@@ -118,8 +114,6 @@
     "patha": "^0.4.1",
     "prettier": "3.0.0",
     "prettier-config-atomic": "^3.1.0",
-    "quote-unquote": "^1.0.0",
-    "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
     "semver": "7.5.4",
     "setup-python": "github:actions/setup-python#v4.7.0",
@@ -135,6 +129,35 @@
     "user-access": "workspace:*",
     "which": "^3.0.1"
   },
+  "bundledDependencies": [
+    "@actions/core",
+    "@actions/exec",
+    "@actions/io",
+    "@actions/tool-cache",
+    "admina",
+    "ci-info",
+    "ci-log",
+    "escape-path-with-spaces",
+    "escape-quotes",
+    "escape-string-regexp",
+    "exec-powershell",
+    "execa",
+    "is-url-online",
+    "micro-memoize",
+    "mri",
+    "msvc-dev-cmd",
+    "numerous",
+    "path-exists",
+    "patha",
+    "retry-as-promised",
+    "semver",
+    "setup-python",
+    "simple-update-notifier",
+    "time-delta",
+    "ubuntu-version",
+    "untildify-user",
+    "user-access"
+  ],
   "engines": {
     "node": ">=12.x"
   },
