feat: install python packages using pipx to avoid conflicts with system

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -32,6 +32,7 @@ words:
   - DCMAKE
   - deps
   - devel
+  - DVCPKG
   - dyld
   - eabi
   - esmodule
@@ -67,6 +68,7 @@ words:
   - OSSDK
   - papm
   - patha
+  - pipx
   - pnpm
   - pwsh
   - pygments
@@ -74,6 +76,7 @@ words:
   - Sccache
   - setupcpp
   - setx
+  - SYSROOT
   - Syuu
   - terserrc
   - Trofimovich
@@ -83,6 +86,7 @@ words:
   - upleveled
   - vbatts
   - vcpkg
+  - VCPKG
   - vcvarsall
   - visualc
   - visualcpp
@@ -90,9 +94,6 @@ words:
   - whatwg
   - xcrun
   - Yahyaabadi
-  - VCPKG
-  - DVCPKG
-  - SYSROOT
 ignoreWords: []
 import: []
 dictionaryDefinitions: []
