tests: skip some msvc installation tests based on the Windows version

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -193,6 +193,8 @@ jobs:
       - name: Tests
         run: |
           pnpm run test
+        env:
+          RUNNER_OS_NAME: ${{ matrix.os }}
 
       - name: Setup Node 12
         uses: actions/setup-node@v3
