--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "user-access": "workspace:*",
     "which": "^3.0.1"
   },
-  "bundledDependencies": [
+  "productionDependencies": [
     "@actions/core",
     "@actions/exec",
     "@actions/io",
