--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -135,7 +135,7 @@ jobs:
 
   Test:
     name: Test-${{ matrix.os }}
-    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip test]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     needs: [Build]
     runs-on: ${{ matrix.os }}
     strategy:
@@ -191,6 +191,7 @@ jobs:
       #   uses: mxschmitt/action-tmate@v3
 
       - name: Tests
+        if: ${{ !contains(github.event.head_commit.message, '[skip test]') }}
         run: |
           pnpm run test
         env:
@@ -214,7 +215,7 @@ jobs:
 
   Docker:
     name: Test-${{ matrix.container }}
-    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip test]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     needs: [Build]
     runs-on: ${{ matrix.os }}
     strategy:
