ci: fix placing the built executables [skip test]

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -263,9 +263,7 @@ jobs:
           mv -v ./dist/ ./dist-artifacts
           mv -v ./dist-artifacts/* ./
 
-          mv -v ./exe/ ./exe-artifacts
-          mv -v ./exe-artifacts/* ./
-
+          mv -v ./exe/* ./
           chmod +x -R ./exe/
 
       - name: Draft the release
