--- a/package.json
+++ b/package.json
@@ -119,8 +119,8 @@
     "setup-python": "github:actions/setup-python#v4.7.0",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
+    "terser-config-atomic": "^1.0.0",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-readme": "^1.1.3",
     "typescript": "^5.1.6",
