--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
     "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous && pnpm update",
+    "bump": "ncu -u -x numerous,execa && pnpm update",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
@@ -75,15 +75,15 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
-    "@babel/cli": "^7.22.9",
-    "@swc/jest": "^0.2.27",
-    "@types/cross-spawn": "^6.0.2",
-    "@types/eslint": "^8.44.1",
-    "@types/jest": "^29.5.3",
+    "@babel/cli": "^7.22.15",
+    "@swc/jest": "^0.2.29",
+    "@types/cross-spawn": "^6.0.3",
+    "@types/eslint": "^8.44.2",
+    "@types/jest": "^29.5.4",
     "@types/mri": "^1.1.1",
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.5.9",
     "@types/prettier": "2.7.3",
-    "@types/semver": "^7.5.0",
+    "@types/semver": "^7.5.1",
     "@types/which": "^3.0.0",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
     "admina": "^0.1.3",
@@ -92,27 +92,27 @@
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^6.31.2",
+    "cspell": "^7.3.2",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^8.46.0",
+    "eslint": "^8.48.0",
     "eslint-config-atomic": "^1.19.3",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
-    "jest": "^29.6.2",
+    "jest": "^29.6.4",
     "micro-memoize": "^4.1.2",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
-    "npm-check-updates": "^16.10.17",
+    "npm-check-updates": "^16.13.3",
     "npm-run-all2": "^6.0.6",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
     "parcel": "2.9.3",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
-    "prettier": "3.0.0",
+    "prettier": "3.0.3",
     "prettier-config-atomic": "^3.1.0",
     "retry-as-promised": "^7.0.4",
     "semver": "7.5.4",
@@ -123,11 +123,11 @@
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ts-node": "^10.9.1",
     "ts-readme": "^1.1.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
     "user-access": "workspace:*",
-    "which": "^3.0.1"
+    "which": "^4.0.0"
   },
   "productionDependencies": [
     "@actions/core",
