--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
-    "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
+    "build.parcel": "cross-env NODE_ENV=production parcel build --reporter @parcel/reporter-bundle-analyzer && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
     "bump": "ncu -u -x numerous,execa && pnpm update",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
@@ -76,6 +76,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.22.15",
+    "@parcel/reporter-bundle-analyzer": "^2.9.3",
     "@swc/jest": "^0.2.29",
     "@types/cross-spawn": "^6.0.3",
     "@types/eslint": "^8.44.2",
@@ -187,7 +188,8 @@
   },
   "pnpm": {
     "overrides": {
-      "whatwg-url": "^12"
+      "whatwg-url": "^12",
+      "semver": "^7.5.4"
     }
   },
   "targets": {
