fix: dedupe the dependencies

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
     "build.parcel": "cross-env NODE_ENV=production parcel build --reporter @parcel/reporter-bundle-analyzer && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous,execa && pnpm update",
+    "bump": "ncu -u -x numerous,execa && pnpm update && pnpm dedupe",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
@@ -116,7 +116,7 @@
     "prettier": "3.0.3",
     "prettier-config-atomic": "^3.1.0",
     "retry-as-promised": "^7.0.4",
-    "semver": "7.5.4",
+    "semver": "^7.5.4",
     "setup-python": "github:aminya/setup-python#a783db655c6e40317e2c0c96f9d162d9c9f4a751",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
