--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@types/eslint": "^8.44.2",
     "@types/jest": "^29.5.4",
     "@types/mri": "^1.1.1",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.6.0",
     "@types/prettier": "2.7.3",
     "@types/semver": "^7.5.1",
     "@types/which": "^3.0.0",
@@ -93,14 +93,15 @@
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^7.3.2",
+    "cspell": "^7.3.5",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "eslint-config-atomic": "^1.19.3",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
+    "fs-extra": "^11.1.1",
     "is-url-online": "^1.5.0",
     "jest": "^29.6.4",
     "micro-memoize": "^4.1.2",
@@ -143,6 +144,7 @@
     "escape-string-regexp",
     "exec-powershell",
     "execa",
+    "fs-extra",
     "is-url-online",
     "micro-memoize",
     "mri",
@@ -184,12 +186,14 @@
   "alias": {
     "electron": false,
     "patha": "patha/dist/index.node.mjs",
-    "admina": "admina/dist/index.mjs"
+    "admina": "admina/dist/index.mjs",
+    "fs/promises": "fs-extra/lib/esm.mjs"
   },
   "pnpm": {
     "overrides": {
       "whatwg-url": "^12",
-      "semver": "^7.5.4"
+      "semver": "^7.5.4",
+      "isexe": "^2"
     }
   },
   "targets": {
