feat: use grantUserWriteAccess from admina and await it

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@types/semver": "^7.5.0",
     "@types/which": "^3.0.0",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
-    "admina": "^0.1.3",
+    "admina": "^0.2.1",
     "caxa": "^3.0.1",
     "ci-info": "^3.8.0",
     "ci-log": "workspace:*",
@@ -126,7 +126,6 @@
     "typescript": "^5.1.6",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
-    "user-access": "workspace:*",
     "which": "^3.0.1"
   },
   "productionDependencies": [
@@ -155,8 +154,7 @@
     "simple-update-notifier",
     "time-delta",
     "ubuntu-version",
-    "untildify-user",
-    "user-access"
+    "untildify-user"
   ],
   "engines": {
     "node": ">=12.x"
