--- a/package.json
+++ b/package.json
@@ -71,49 +71,49 @@
   },
   "prettier": "prettier-config-atomic",
   "devDependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
-    "@babel/cli": "^7.22.9",
-    "@swc/jest": "^0.2.27",
-    "@types/cross-spawn": "^6.0.2",
-    "@types/eslint": "^8.44.1",
-    "@types/jest": "^29.5.3",
-    "@types/mri": "^1.1.1",
-    "@types/node": "^20.4.5",
+    "@babel/cli": "^7.23.4",
+    "@swc/jest": "^0.2.31",
+    "@types/cross-spawn": "^6.0.6",
+    "@types/eslint": "^8.56.2",
+    "@types/jest": "^29.5.11",
+    "@types/mri": "^1.1.5",
+    "@types/node": "^20.11.5",
     "@types/prettier": "2.7.3",
-    "@types/semver": "^7.5.0",
-    "@types/which": "^3.0.0",
+    "@types/semver": "^7.5.6",
+    "@types/which": "^3.0.3",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
-    "admina": "^0.2.2",
+    "admina": "^0.3.0",
     "caxa": "^3.0.1",
-    "ci-info": "^3.8.0",
+    "ci-info": "^4.0.0",
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^6.31.2",
+    "cspell": "^8.3.2",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^8.46.0",
-    "eslint-config-atomic": "^1.19.3",
+    "eslint": "^8.56.0",
+    "eslint-config-atomic": "^1.20.6",
     "exec-powershell": "workspace:*",
-    "execa": "^7.2.0",
+    "execa": "<8",
     "is-url-online": "^1.5.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
     "micro-memoize": "^4.1.2",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#97843d525947e3f3776ee359b597316909754c4d",
-    "npm-check-updates": "^16.10.17",
-    "npm-run-all2": "^6.0.6",
+    "npm-check-updates": "^16.14.12",
+    "npm-run-all2": "^6.1.1",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
     "parcel": "2.9.3",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
-    "prettier": "3.0.0",
-    "prettier-config-atomic": "^3.1.0",
+    "prettier": "3.2.4",
+    "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
     "semver": "7.5.4",
@@ -122,12 +122,12 @@
     "simple-update-notifier": "^2.0.0",
     "terser-config-atomic": "^1.0.0",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.3.3",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
-    "which": "^3.0.1"
+    "which": "^4.0.0"
   },
   "productionDependencies": [
     "@actions/core",
@@ -186,7 +186,7 @@
   },
   "pnpm": {
     "overrides": {
-      "whatwg-url": "^12"
+      "@actions/http-client": "2.1.0"
     }
   },
   "targets": {
