--- a/packages/exec-powershell/package.json
+++ b/packages/exec-powershell/package.json
@@ -11,11 +11,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "execa": "^7.1.1",
-    "which": "^2.0.2"
+    "execa": "<8",
+    "which": "^4.0.0"
   },
   "devDependencies": {
-    "@types/which": "^2.0.2"
+    "@types/which": "^3.0.0"
   },
   "keywords": [
     "powershell",
