--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,3 @@
-public-hoist-pattern[]=*
 package-lock=false
 lockfile=true
-prefer-frozen-lockfile=true
-side-effects-cache=true
-# optional=false
+node-linker=hoisted
