chore: update parcel

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
     "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous && pnpm update",
+    "bump": "ncu -u -x numerous,execa,prettier && pnpm update",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
@@ -109,7 +109,7 @@
     "npm-run-all2": "^6.1.1",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
-    "parcel": "2.9.3",
+    "parcel": "2.11.0",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
     "prettier": "3.2.2",
