--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@types/semver": "^7.5.6",
     "@types/which": "^3.0.3",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
-    "admina": "^0.3.0",
+    "admina": "^1.0.0",
     "caxa": "^3.0.1",
     "ci-info": "^4.0.0",
     "ci-log": "workspace:*",
@@ -99,7 +99,7 @@
     "eslint": "^8.56.0",
     "eslint-config-atomic": "^1.20.6",
     "exec-powershell": "workspace:*",
-    "execa": "<8",
+    "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
     "micro-memoize": "^4.1.2",
