--- a/packages/untildify-user/package.json
+++ b/packages/untildify-user/package.json
@@ -11,8 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "admina": "1.0.1",
-    "untildify": "^5.0.0"
+    "admina": "1.0.1"
   },
   "keywords": [
     "tilde",
