--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
     "micro-memoize": "^4.1.2",
+    "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#97843d525947e3f3776ee359b597316909754c4d",
     "npm-check-updates": "^16.14.12",
