--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
+    "macos-release": "^3.2.0",
     "micro-memoize": "^4.1.2",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
