ci: test on MacOS 13

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -146,6 +146,7 @@ jobs:
           - windows-2019
           - ubuntu-22.04
           - ubuntu-20.04
+          - macos-13
           - macos-12
           - macos-11
         node:
