--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.23.4",
+    "@shockpkg/hdi-mac": "^3.1.1",
     "@swc/jest": "^0.2.31",
     "@types/cross-spawn": "^6.0.6",
     "@types/eslint": "^8.56.2",
