--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.23.9",
-    "@shockpkg/archive-files": "https://github.com/shockpkg/archive-files#3.2.2",
+    "@shockpkg/archive-files": "https://github.com/aminya/archive-files#f12d4f989d6d5698a9fc3f6fd805d0923b2c2a9e",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
     "@types/eslint": "^8.56.2",
