--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
     "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous,execa,prettier && pnpm update",
+    "bump": "ncu -u -x numerous,execa,prettier,@types/node && pnpm update",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
@@ -82,7 +82,7 @@
     "@types/eslint": "^8.56.2",
     "@types/jest": "^29.5.12",
     "@types/mri": "^1.1.5",
-    "@types/node": "^20.11.19",
+    "@types/node": "^12",
     "@types/prettier": "2.7.3",
     "@types/semver": "^7.5.7",
     "@types/which": "^3.0.3",
