--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -229,12 +229,12 @@ jobs:
         pnpm:
           - 8
         container:
-          - "ubuntu.dockerfile"
-          - "fedora.dockerfile"
-          - "arch.dockerfile"
-          - "ubuntu-mingw.dockerfile"
-          # - "fedora-mingw.dockerfile"
-          # - "arch-mingw.dockerfile"
+          - { file: "./dev/docker/ci/ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-17" }
+          - { file: "./dev/docker/ci/fedora-llvm.dockerfile", image: "setup-cpp-fedora-llvm", tag: "40-17" }
+          - { file: "./dev/docker/ci/arch-llvm.dockerfile", image: "setup-cpp-arch-llvm", tag: "base-17" }
+          - { file: "./dev/docker/ci/ubuntu-mingw.dockerfile", image: "setup-cpp-ubuntu-mingw", tag: "22.04-13" }
+          # - { file: "./dev/docker/ci/fedora-mingw.dockerfile", image: "setup-cpp-fedora-mingw", tag: "40-13" }
+          # - { file: "./dev/docker/ci/arch-mingw.dockerfile", image: "setup-cpp-arch-mingw", tag: "base-13" }
     steps:
       - uses: actions/checkout@v4
         with:
@@ -245,10 +245,20 @@ jobs:
         with:
           name: dist
 
-      - name: Build
-        id: docker_build
-        run: |
-          docker build -f ./dev/docker/__tests__/${{ matrix.container }} -t setup-cpp .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ matrix.container.file }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:${{ matrix.container.tag }}
 
   Release:
     if: startsWith(github.ref, 'refs/tags/')
