--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "./src",
     "dev/scripts",
     "packages/untildify-user/untildify.ts",
-    "dev/docker/__tests__/generate-docker-tests.mjs",
+    "dev/docker/ci/docker-ci.mjs",
     "./jest.config.ts"
   ]
 }
