--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build
         run: |
           pnpm build
-          pnpm build.docker_tests
+          pnpm build.docker-ci
 
       - name: Lint
         run: |
@@ -229,12 +229,12 @@ jobs:
         pnpm:
           - 8
         container:
-          - { file: "./dev/docker/ci/ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-17" }
-          - { file: "./dev/docker/ci/fedora-llvm.dockerfile", image: "setup-cpp-fedora-llvm", tag: "40-17" }
-          - { file: "./dev/docker/ci/arch-llvm.dockerfile", image: "setup-cpp-arch-llvm", tag: "base-17" }
-          - { file: "./dev/docker/ci/ubuntu-mingw.dockerfile", image: "setup-cpp-ubuntu-mingw", tag: "22.04-13" }
-          # - { file: "./dev/docker/ci/fedora-mingw.dockerfile", image: "setup-cpp-fedora-mingw", tag: "40-13" }
-          # - { file: "./dev/docker/ci/arch-mingw.dockerfile", image: "setup-cpp-arch-mingw", tag: "base-13" }
+          - { file: "ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-17" }
+          - { file: "fedora-llvm.dockerfile", image: "setup-cpp-fedora-llvm", tag: "40-17" }
+          - { file: "arch-llvm.dockerfile", image: "setup-cpp-arch-llvm", tag: "base-17" }
+          - { file: "ubuntu-mingw.dockerfile", image: "setup-cpp-ubuntu-mingw", tag: "22.04-13" }
+          # - { file: "fedora-mingw.dockerfile", image: "setup-cpp-fedora-mingw", tag: "40-13" }
+          # - { file: "arch-mingw.dockerfile", image: "setup-cpp-arch-mingw", tag: "base-13" }
     steps:
       - uses: actions/checkout@v4
         with:
@@ -256,9 +256,17 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ${{ matrix.container.file }}
+          file: ./dev/docker/ci/${{ matrix.container.file }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:${{ matrix.container.tag }}
+
+      - name: Test
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./dev/docker/examples/${{ matrix.container.file }}
+          push: false
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-${{ matrix.container.image }}:${{ matrix.container.tag }}
 
   Release:
     if: startsWith(github.ref, 'refs/tags/')
