--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -263,6 +263,11 @@ jobs:
       - name: Tag
         run: |
           docker tag ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:${{ matrix.container.tag }} ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:latest
+
+      - name: Push Latest
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          docker login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:latest
 
       - name: Test
