--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -249,7 +249,7 @@ jobs:
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: aminya
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
@@ -258,7 +258,7 @@ jobs:
           context: .
           file: ./dev/docker/ci/${{ matrix.container.file }}
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:${{ matrix.container.tag }},${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.container.image }}:latest
+          tags: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}:latest
 
       - name: Test
         uses: docker/build-push-action@v5
@@ -266,7 +266,7 @@ jobs:
           context: .
           file: ./dev/docker/examples/${{ matrix.container.file }}
           push: false
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-${{ matrix.container.image }}:${{ matrix.container.tag }}
+          tags: aminya/test-${{ matrix.container.image }}:${{ matrix.container.tag }}
 
   Release:
     if: startsWith(github.ref, 'refs/tags/')
