ci: validate dist via git diff

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,6 +61,14 @@ jobs:
         run: |
           pnpm run test.lint
 
+      - name: Validate Dist
+        run: |
+          if [ "$(git diff --ignore-space-at-eol --text dist/ | wc -l)" -gt "0" ]; then
+            echo "Detected uncommitted changes after build. See status below:"
+            git diff --ignore-space-at-eol --text dist/
+            exit 1
+          fi
+
       - name: Upload Dist
         uses: actions/upload-artifact@v3
         with:
