feat: generate binaries for MacOS Arm

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -92,6 +92,7 @@ jobs:
         os:
           - windows-2022
           - ubuntu-22.04
+          - macos-13
           - macos-12
         node:
           - 20
