--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "dev": "cross-env NODE_ENV=development parcel watch",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
-    "lint": "run-p --aggregate-output --continue-on-error lint.cspell lint.eslint lint.dprint lint.tsc",
+    "lint": "run-p --aggregate-output --continue-on-error lint.cspell lint.eslint lint.dprint lint.tsc lint.biome",
     "lint.cspell": "cspell lint --no-progress --show-suggestions --cache --cache-location ./.cache/cspell/.cspellcache",
     "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
+    "lint.biome": "biome check --write --unsafe",
     "lint.dprint": "dprint fmt",
-    "lint.tsc": "tsc --noEmit",
+    "lint.tsc": "tsc --noEmit --pretty",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
     "prepublishOnly": "rm ./dist/tsconfig.tsbuildinfo",
-    "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.eslint test.lint.dprint lint.tsc",
+    "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.eslint test.lint.dprint lint.tsc test.lint.biome",
     "test.lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
+    "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
     "test": "jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
@@ -58,6 +60,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.24.1",
+    "@biomejs/biome": "^1.8.3",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
