--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "scripts": {
     "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
     "build.packages": "pnpm run -r build",
-    "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous,execa,prettier,@types/node && pnpm update",
-    "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
+    "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report 10 && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
+    "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync",
+    "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
     "copy.matchers.actions": "shx cp ./src/gcc/gcc_matcher.json ./dist/actions/ && shx cp ./src/msvc/msvc_matcher.json ./dist/actions/ && shx cp ./src/python/python_matcher.json ./dist/actions/ && shx cp ./src/llvm/llvm_matcher.json ./dist/actions/",
@@ -59,16 +59,16 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
-    "@babel/cli": "^7.24.1",
+    "@babel/cli": "^7.24.8",
     "@biomejs/biome": "^1.8.3",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
-    "@types/eslint": "^8.56.6",
+    "@types/eslint": "^8.56.11",
     "@types/jest": "^29.5.12",
     "@types/node": "^12.20.55",
     "@types/semver": "^7.5.8",
-    "@types/which": "^3.0.3",
+    "@types/which": "^3.0.4",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
     "admina": "^1.0.1",
     "caxa": "^3.0.1",
@@ -76,24 +76,24 @@
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^8.6.1",
-    "dprint": "^0.45.0",
+    "cspell": "^8.13.1",
+    "dprint": "^0.47.2",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-atomic": "^1.21.2",
+    "eslint-config-atomic": "^1.22.0",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
-    "macos-release": "^3.2.0",
+    "macos-release": "^3.3.0",
     "micro-memoize": "^4.1.2",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
-    "npm-check-updates": "^16.14.18",
-    "npm-run-all2": "^6.1.2",
+    "npm-check-updates": "^17.0.3",
+    "npm-run-all2": "^6.2.2",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
     "parcel": "2.12.0",
@@ -103,7 +103,7 @@
     "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
-    "semver": "7.6.0",
+    "semver": "7.6.3",
     "setup-python": "github:aminya/setup-python#a783db655c6e40317e2c0c96f9d162d9c9f4a751",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
@@ -111,7 +111,7 @@
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
-    "typescript": "^5.4.3",
+    "typescript": "^5.5.4",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
     "which": "^4.0.0"
@@ -179,9 +179,7 @@
       "engines": {
         "node": ">=12.x"
       },
-      "includeNodeModules": {
-        "update-notifier": false
-      },
+      "includeNodeModules": true,
       "optimize": true,
       "outputFormat": "commonjs"
     },
@@ -190,9 +188,7 @@
       "engines": {
         "node": ">=20.x"
       },
-      "includeNodeModules": {
-        "update-notifier": false
-      },
+      "includeNodeModules": true,
       "optimize": true,
       "outputFormat": "commonjs"
     },
