ci: always upload the dist in build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,6 +73,7 @@ jobs:
 
       - name: Upload Dist
         uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: dist
           path: |
