--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,8 @@
             "**/dist/**",
             "dev/cpp_vcpkg_project/**/*",
             "**/.venv/",
-            "**/.*cache/"
+            "**/.*cache/",
+            "**/coverage/"
         ],
         "ignoreUnknown": true
     },
